<resources>
    <string name="app_name">RMO</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Log Out</string>
    <string name="nav_header_text">RMO Landscapes Ltd</string>
    <string name="Home">Home</string>
    <string name="Clock_In">Clock In</string>
    <string name="Clock_Out">Clock Out</string>
    <string name="Locations">Location</string>
    <string name="Profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="App_TC">App Terms &amp; Conditions</string>
    <string name="ennis">Ennis</string>
    <string name="shannon">Shannon</string>
    <string name="limerick">Limerick</string>
    <string name="clockin_info">Clock In</string>
    <string name="clockout_info">Clock Out</string>
    <string name="locations_info">Locations</string>
    <string name="button_clockin">Press to clock in</string>
    <string name="button_clockout">Press to clock out</string>
    <string name="rmo_logo">RMO Logo</string>
    <string name="welcome">Welcome :</string>
    <string name="hint_email">Email</string>
    <string name="login_text">RMO Landscaping</string>
    <string name="hint_password">Password</string>
    <string name="login_button">Log In</string>
    <string name="logout_button">Log Out</string>
    <string-array name="spinner_ennis_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>




</resources>
