<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_clockin"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/Clock_In" />
        <item
            android:id="@+id/nav_clockout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Clock_Out" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Locations" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Profile" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Logout" />
            <item
                android:id="@+id/nav_conditions"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/App_TC" />
        </menu>
    </item>

</menu>
