<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_rmo_clockout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/rmo_logo"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/txt_clockout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clockout_info" />

    <TextClock
        android:id="@+id/textClock2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CalendarView
        android:id="@+id/calendarView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_clockout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_clockout" />

</LinearLayout>